--- a/mufel-game/package.json
+++ b/mufel-game/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "framer-motion": "^12.5.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-swipeable": "^7.0.2"
   },
