--- a/mufel-game/package.json
+++ b/mufel-game/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
