--- a/mufel-game/package.json
+++ b/mufel-game/package.json
@@ -23,7 +23,10 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-swipeable": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
